[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/kb24.png" type="Texture" id=1]
[ext_resource path="res://textures/gp24.png" type="Texture" id=2]
[ext_resource path="res://scripts/tab_racelog.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="ControllerType" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 19.0
text = "Used KEYBOARD"

[node name="GamepadIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 398.0
margin_right = 438.0
margin_bottom = 24.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="KeyboardIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 319.0
margin_right = 355.0
margin_bottom = 24.0
texture = ExtResource( 1 )
stretch_mode = 5

[node name="VSeparator6" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 359.0
margin_right = 363.0
margin_bottom = 24.0

[node name="UnstableFPS" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 367.0
margin_right = 478.0
margin_bottom = 24.0
button_mask = 0
text = "Unstable FPS"

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 482.0
margin_right = 486.0
margin_bottom = 24.0

[node name="GasTaps" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 575.0
margin_bottom = 24.0
button_mask = 0
text = "Gas Taps"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 579.0
margin_right = 583.0
margin_bottom = 24.0

[node name="BrakeTaps" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 587.0
margin_right = 684.0
margin_bottom = 24.0
button_mask = 0
text = "Brake Taps"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 688.0
margin_right = 692.0
margin_bottom = 24.0

[node name="NosTaps" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 696.0
margin_right = 785.0
margin_bottom = 24.0
button_mask = 0
text = "NOS Taps"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 789.0
margin_right = 793.0
margin_bottom = 24.0

[node name="HandlingChanged" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 797.0
margin_right = 939.0
margin_bottom = 24.0
button_mask = 0
text = "Handling Changed"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 943.0
margin_right = 947.0
margin_bottom = 24.0

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 951.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Close Log"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FileReader" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 286.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timestamp" type="Label" parent="VBoxContainer/HSplitContainer/FileReader"]
margin_right = 286.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 1
clip_text = true

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer/FileReader"]
margin_top = 18.0
margin_right = 286.0
margin_bottom = 38.0
text = "Raw File"
items = [ "Raw File", null, false, 0, null, "Isolate Race Log", null, false, 1, null ]
selected = 0

[node name="Text" type="TextEdit" parent="VBoxContainer/HSplitContainer/FileReader"]
margin_top = 42.0
margin_right = 286.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
show_line_numbers = true
minimap_width = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/FileReader"]
margin_top = 552.0
margin_right = 286.0
margin_bottom = 572.0
size_flags_horizontal = 3
alignment = 1

[node name="OpenFolderButton" type="Button" parent="VBoxContainer/HSplitContainer/FileReader/HBoxContainer"]
margin_right = 286.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Open Folder"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 298.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
split_offset = 300

[node name="DynoChanges" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/VSplitContainer"]
margin_right = 726.0
margin_bottom = 572.0

[node name="RaceTimeContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges"]
margin_right = 726.0
margin_bottom = 14.0

[node name="RaceTime" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/RaceTimeContainer"]
margin_right = 185.0
margin_bottom = 14.0
text = "The race took approximately "

[node name="FPSContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges"]
margin_top = 18.0
margin_right = 726.0
margin_bottom = 32.0

[node name="FPSLabel" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_right = 30.0
margin_bottom = 14.0
text = "FPS: "

[node name="FPSAverage" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 34.0
margin_right = 101.0
margin_bottom = 14.0
text = "Average = "

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 105.0
margin_right = 109.0
margin_bottom = 14.0

[node name="FPS1PercentLows" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 113.0
margin_right = 185.0
margin_bottom = 14.0
text = "1% Lows = "

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 189.0
margin_right = 193.0
margin_bottom = 14.0

[node name="FPSMode" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 197.0
margin_right = 249.0
margin_bottom = 14.0
text = "Mode = "

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 253.0
margin_right = 257.0
margin_bottom = 14.0

[node name="FPSMinimum" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 261.0
margin_right = 339.0
margin_bottom = 14.0
text = "Minimum = "

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 343.0
margin_right = 347.0
margin_bottom = 14.0

[node name="FPSMaximum" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/FPSContainer"]
margin_left = 351.0
margin_right = 431.0
margin_bottom = 14.0
text = "Maximum = "

[node name="TapsScoreContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges"]
margin_top = 36.0
margin_right = 726.0
margin_bottom = 50.0

[node name="TapsScoreLabel" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/TapsScoreContainer"]
margin_right = 253.0
margin_bottom = 14.0
text = "Tapping likelihood scores (&instances): "

[node name="GasTapsScore" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/TapsScoreContainer"]
margin_left = 257.0
margin_right = 297.0
margin_bottom = 14.0
text = "Gas = "

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/TapsScoreContainer"]
margin_left = 301.0
margin_right = 305.0
margin_bottom = 14.0

[node name="BrakeTapsScore" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/TapsScoreContainer"]
margin_left = 309.0
margin_right = 361.0
margin_bottom = 14.0
text = "Brake = "

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/TapsScoreContainer"]
margin_left = 365.0
margin_right = 369.0
margin_bottom = 14.0

[node name="NOSTapsScore" type="Label" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges/TapsScoreContainer"]
margin_left = 373.0
margin_right = 417.0
margin_bottom = 14.0
text = "NOS = "

[node name="Text" type="TextEdit" parent="VBoxContainer/HSplitContainer/VSplitContainer/DynoChanges"]
margin_top = 54.0
margin_right = 726.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true

[node name="Chart" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/VSplitContainer"]
visible = false
margin_top = 366.0
margin_right = 726.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="ChartOptions" type="OptionButton" parent="VBoxContainer/HSplitContainer/VSplitContainer/Chart"]
margin_right = 726.0
margin_bottom = 20.0

[node name="Control" type="Control" parent="VBoxContainer/HSplitContainer/VSplitContainer/Chart"]
margin_top = 24.0
margin_right = 726.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/FileReader/OptionButton" to="." method="_on_FileReader_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/FileReader/HBoxContainer/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
